# opensot_norm_task

./: CMakeLists.txt  README.md  package.xml
include/opensot_norm_task/tasks/: NormTask.h
src/tasks/: NormTask.cpp
tests/: CMakeLists.txt
tests/tasks/: TestNormTask.cpp
